--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: php
+
 php:
- - 7.0
-script:
+  - 7.1
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: 7.1
+
+sudo: required
+
+script: php vendor/bin/phpunit -v
